//
// Copyright 2021 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package loader.fuzz.abi_functions;

message AbiFunctions {
  repeated AbiFunction functions = 1;
}

message AbiFunction {
  oneof function {
    Panic panic = 1;
    ReadRequest read_request = 2;
    WriteResponse write_response = 3;
    StorageGetItem storage_get_item = 4;
    WriteLogMessage write_log_message = 5;
  }
}

message Panic {}

message ReadRequest {}

message WriteResponse {
  bytes response = 1;
}

message StorageGetItem {
  bytes key = 1;
}

message WriteLogMessage {
  bytes message = 1;
}
